<resources>
    <string name="app_name" translatable="false">CriminalIntent</string>

    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_date">Crime Date</string>
    <string name="crime_time">Crime time</string>
    <string name="crime_title">Crime Title</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle" translatable="false">Show Subtitle</string>
    <string name="hide_subtitle" translatable="false">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="call_suspect">Call %1$s</string>
    <string name="call_hint" translatable="false">Suspect to call</string>

    <string name="crime_report" translatable="false">%1$s!
     The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved" translatable="false">The case is solved</string>
    <string name="crime_report_unsolved" translatable="false">The case is unsolved</string>
    <string name="crime_report_no_suspect" translatable="false">there is no suspect.</string>
    <string name="crime_report_suspect" translatable="false">the suspect is %s.</string>
    <string name="crime_report_subject" translatable="false">CriminalIntent Crime Report</string>
    <string name="send_report" translatable="false">Send crime report via</string>
    
    
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crimes</item>
    </plurals>

    <string name="crime_title_hint" translatable="false">Enter a title for the crime.</string>
    <string name="is_clicked" translatable="false">\u0020is clicked!</string>
<!--    <string name="solved">solved</string>   -->
    <string name="first">To the first</string>
    <string name="last">To the last</string>
    <string name="delete_crime">Delete crime</string>
    <string name="crimelist_is_empty">CrimeList is empty</string>

    <string name="smth_wrong" translatable="false">Something goes wrong</string>
    <string name="image" translatable="false">Big image of crime scene</string>
    
    <string name="crime_photo_button_description" translatable="false">Take photo a crime scene.</string>
    <string name="crime_photo_btn_is_disabled_description" translatable="false">Take photo button is disabled.</string>
    <string name="crime_photo_no_image_description" translatable="false">Crime scene photo is not set.</string>
    <string name="crime_photo_image_description" translatable="false">Crime scene photo is set.</string>
    <string name="recyclerview_solved_description" translatable="false">This crime is solved.</string>
    <string name="date_btn_description" translatable="false">Choose date of the crime.</string>
    <string name="time_btn_description" translatable="false">Choose time of the crime.</string>
    <string name="suspect_btn_description" translatable="false">Choose suspect.</string>
    <string name="suspect_btn_new_description" translatable="false">Choose suspect. Now suspect is %1$s.</string>
    <string name="send_crime_report_btn_description" translatable="false">Send Crime Report.</string>
    <string name="date_btn_new_description" translatable="false">The Date of the Crime is set on\u0020</string>
    <string name="solved_checkbox_description" translatable="false">This Crime is solved.</string>
    <string name="unsolved_checkbox_description" translatable="false">This Crime is still unsolved.</string>
    <string name="call_suspect_btn_description" translatable="false">Call %1$s.</string>
    <string name="go_to_the_first_btn_description" translatable="false">Go to the first crime in list.</string>
    <string name="go_to_the_last_btn_description" translatable="false">Go to the last crime in list.</string>

    <string name="new_crime_image_is_set" translatable="false">New Crime image is set.</string>
    <string name="new_crime_image_is_not_set" translatable="false">New Crime image is not set.</string>
    <string name="crime_image_is_not_changed" translatable="false">Crime image is not changed.</string>
</resources>
